--- a/textproc/py-html2text/Makefile
+++ b/textproc/py-html2text/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2006/02/05 23:11:06 joerg Exp $
+# $NetBSD: Makefile,v 1.3 2006/03/01 23:25:32 schmonz Exp $
 #
 
-DISTNAME=		html2text-2.24
+DISTNAME=		html2text-2.25
 PKGNAME=		${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=		textproc python
 MASTER_SITES=		${HOMEPAGE}
