--- a/security/rats/Makefile
+++ b/security/rats/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2006/02/05 23:10:47 joerg Exp $
+# $NetBSD: Makefile,v 1.21 2006/10/04 21:58:14 wiz Exp $
 #
 
 DISTNAME=		rats-2.1
-PKGREVISION=		4
+PKGREVISION=		5
 CATEGORIES=		security
 MASTER_SITES=		http://www.securesoftware.com/rats/
 
