--- a/net/citrix_ica/Makefile
+++ b/net/citrix_ica/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.28 2006/03/04 21:30:17 jlam Exp $
+# $NetBSD: Makefile,v 1.29 2007/01/18 22:34:05 sborrill Exp $
 #
 
 # A default so lintpkgsrc is happy, overridden below
@@ -7,7 +7,7 @@ PKGNAME=	citrix_ica-9.0.0
 CATEGORIES=	net
 MASTER_SITES=	http://download2.citrix.com/files/en/products/client/ica/current/
 
-MAINTAINER=	pkgsrc-users@NetBSD.org
+MAINTAINER=	sborrill@NetBSD.org
 HOMEPAGE=	http://www.citrix.com/products/clients/ica/technology.asp
 COMMENT=	Citrix(R) ICA client for the Citrix(R) Presentation Server(TM)
 
