--- a/mail/mew/Makefile
+++ b/mail/mew/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.70 2006/10/07 05:13:14 uebayasi Exp $
+# $NetBSD: Makefile,v 1.71 2006/10/19 19:50:08 wiz Exp $
 
-DISTNAME=	mew-5.1
+DISTNAME=	mew-5.2
 PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
 CATEGORIES=	mail
 MASTER_SITES=	http://www.mew.org/Release/
