--- a/sysutils/xfce4-systemload-plugin/Makefile
+++ b/sysutils/xfce4-systemload-plugin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2006/02/05 23:10:58 joerg Exp $
+# $NetBSD: Makefile,v 1.13 2006/04/17 13:46:13 wiz Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -9,6 +9,12 @@ PKGREVISION=	4
 CATEGORIES=	sysutils
 MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	Xfce system load plugin
+
+.include "../../mk/bsd.prefs.mk"
+
+.if ${OPSYS} == "DragonFly"
+MAKE_ENV+=	OS_LIBS=-lkinfo
+.endif
 
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
