--- a/security/openssh/Makefile
+++ b/security/openssh/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.174 2006/11/08 01:49:22 taca Exp $
+# $NetBSD: Makefile,v 1.175 2006/11/21 17:47:53 tv Exp $
 
 DISTNAME=		openssh-4.5p1
 PKGNAME=		openssh-4.5.1
+PKGREVISION=		1
 SVR4_PKGNAME=		ossh
 CATEGORIES=		security
 MASTER_SITES=		ftp://ftp.openssh.com/pub/OpenBSD/OpenSSH/portable/ \
