--- a/sysutils/xfce4-cpugraph-plugin/Makefile
+++ b/sysutils/xfce4-cpugraph-plugin/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.6 2006/02/05 23:10:57 joerg Exp $
+# $NetBSD: Makefile,v 1.7 2006/04/17 13:46:14 wiz Exp $
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
@@ -11,6 +11,12 @@ MASTER_SITES=	http://download.berlios.de/xfce-goodies/
 COMMENT=	Xfce CPU load plugin
 
 WRKSRC=		${WRKDIR}/xfce4-cpugraph-plugin
+
+.include "../../mk/bsd.prefs.mk"
+
+.if ${OPSYS} == "DragonFly"
+MAKE_ENV+=	OS_LIBS=-lkinfo
+.endif
 
 .include "../../x11/xfce4-panel/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
