--- a/graphics/py-imaging/Makefile
+++ b/graphics/py-imaging/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.25 2006/02/05 23:09:38 joerg Exp $
+# $NetBSD: Makefile,v 1.26 2006/06/20 23:32:36 minskim Exp $
 
 DISTNAME=	Imaging-1.1.5
 PKGNAME=	${PYPKGPREFIX}-imaging-1.1.5
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	graphics python
 MASTER_SITES=	http://effbot.org/downloads/
 
@@ -21,6 +21,7 @@ post-install:
 		${PREFIX}/${PYINC}/PIL )
 
 .include "../../devel/zlib/buildlink3.mk"
+.include "../../graphics/freetype2/buildlink3.mk"
 .include "../../lang/python/extension.mk"
 .include "../../graphics/jpeg/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
