--- a/devel/cscope/Makefile
+++ b/devel/cscope/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.45 2006/08/24 22:02:02 salo Exp $
+# $NetBSD: Makefile,v 1.46 2007/01/06 22:45:49 wiz Exp $
 
 DISTNAME=	cscope-15.6
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=cscope/}
 
