--- a/devel/swig/Makefile
+++ b/devel/swig/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2006/06/18 10:45:06 rillig Exp $
+# $NetBSD: Makefile,v 1.21 2006/12/02 10:15:46 wulf Exp $
 
 DISTNAME=	swig-1.3.31
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=swig/}
 
