--- a/security/gnutls/Makefile
+++ b/security/gnutls/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.55 2006/12/08 05:44:19 rillig Exp $
+# $NetBSD: Makefile,v 1.56 2007/01/20 17:38:06 wiz Exp $
 
 DISTNAME=	gnutls-1.6.1
 CATEGORIES=	security devel
@@ -36,6 +36,16 @@ MAKE_ENV+=		TZ=UTC
 
 DOCDIR=		${PREFIX}/share/doc/gnutls
 EGDIR=		${PREFIX}/share/examples/gnutls
+
+.include "../../mk/bsd.prefs.mk"
+
+# Darwin's g++ cannot build the gnutls C++ library (PR 35456).
+.if ${OPSYS} == "Darwin"
+CONFIGURE_ARGS+=	--disable-cxx
+PLIST_SUBST+=		CXX="@comment "
+.else
+PLIST_SUBST+=		CXX=""
+.endif
 
 INSTALLATION_DIRS=	${DOCDIR} ${EGDIR} include/gnutls
 
