--- a/databases/libgda-postgres/Makefile
+++ b/databases/libgda-postgres/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2006/12/05 10:22:47 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2006/12/28 12:12:57 joerg Exp $
 #
 
 LIBGDA_PROVIDER=	postgres
-PKGREVISION=		1
 
 .include "../../databases/libgda/Makefile.common"
 
