--- a/www/opera/Makefile
+++ b/www/opera/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.61 2006/12/19 23:02:12 jdolecek Exp $
+# $NetBSD: Makefile,v 1.62 2007/01/07 09:14:15 rillig Exp $
 
 DISTNAME=		opera-${OPERA_PKG_VERSION:S/u/pl/}
 CATEGORIES=		www
@@ -64,7 +64,7 @@ OPERA_ARCH=		-sol8-sparc
 OPERA_DIR=		unix/solaris/${OPERA_PKG_VERSION_DIR}/final/${OPERA_LANG}/${_OPERA_MACHINE_ARCH}/static
 OPERA_DIST_VERSION=	${OPERA_PKG_VERSION:C/u.*//}-${OPERA_VER_DATE}.1-static-qt
 
-WRKSRC=			${WRKDIR}/opera-${OPERA_DIST_VERSION}${OPERA_ARCH}-${OPERA_LANG}-434
+WRKSRC=			${WRKDIR}/opera-${OPERA_DIST_VERSION}${OPERA_ARCH}-${OPERA_LANG}-521
 
 BUILD_DEFS+=		INSTALL_ETC_OPERARC
 INSTALL_ETC_OPERARC?=	no
