--- a/x11/libSM/Makefile
+++ b/x11/libSM/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 17:33:21 joerg Exp $
 #
 
-DISTNAME=		libSM-1.0.1
+DISTNAME=		libSM-1.0.2
 CATEGORIES=		x11 devel
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
