--- a/x11/libXdamage/Makefile
+++ b/x11/libXdamage/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 21:56:46 joerg Exp $
 #
 
-DISTNAME=		libXdamage-1.0.3
+DISTNAME=		libXdamage-1.1
 CATEGORIES=		x11 devel
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
