--- a/x11/libXdmcp/Makefile
+++ b/x11/libXdmcp/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 17:59:48 joerg Exp $
 #
 
-DISTNAME=		libXdmcp-1.0.1
+DISTNAME=		libXdmcp-1.0.2
 CATEGORIES=		x11
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
