--- a/sysutils/xbattbar/Makefile
+++ b/sysutils/xbattbar/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.27 2006/02/05 23:10:57 joerg Exp $
+# $NetBSD: Makefile,v 1.28 2006/03/04 21:30:43 jlam Exp $
 
 DISTNAME=	xbattbar_1.4.2
 PKGNAME=	${DISTNAME:S/_/-/}
@@ -18,4 +18,6 @@ USE_IMAKE=	yes
 PKG_SKIP_REASON+=	"APM is not available for ${MACHINE_PLATFORM}"
 .endif
 
+.include "../../x11/libX11/buildlink3.mk"
+.include "../../x11/libXext/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
