--- a/x11/xfce4-gtk2-engine/Makefile
+++ b/x11/xfce4-gtk2-engine/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.4 2006/04/17 13:46:10 wiz Exp $
+# $NetBSD: Makefile,v 1.5 2006/09/15 17:05:24 drochner Exp $
 #
 
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-XFCE4_VERSION=	2.2.8
+XFCE4_VERSION=	2.2.9
 
 DISTNAME=	gtk-xfce-engine-${XFCE4_VERSION}
 PKGNAME=	xfce4-gtk2-engine-${XFCE4_VERSION}
-PKGREVISION=	4
+#PKGREVISION=	1
 CATEGORIES=	x11
 COMMENT=	Xfce GTK2 themes
 
