--- a/x11/libXv/Makefile
+++ b/x11/libXv/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 21:40:59 joerg Exp $
 #
 
-DISTNAME=		libXv-1.0.2
+DISTNAME=		libXv-1.0.3
 CATEGORIES=		x11
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
