--- a/x11/libXi/Makefile
+++ b/x11/libXi/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 18:24:38 joerg Exp $
 #
 
-DISTNAME=		libXi-1.0.0
+DISTNAME=		libXi-1.1.0
 CATEGORIES=		x11 devel
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
