--- a/net/p5-SOAP-Lite/Makefile
+++ b/net/p5-SOAP-Lite/Makefile
@@ -1,8 +1,9 @@
-# $NetBSD: Makefile,v 1.12 2006/03/04 21:30:22 jlam Exp $
+# $NetBSD: Makefile,v 1.13 2006/10/21 17:11:47 obache Exp $
 #
 
 DISTNAME=	SOAP-Lite-0.69
 PKGNAME=	p5-${DISTNAME}
+PKGREVISION=	1
 CATEGORIES=	net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=SOAP/}
 
@@ -14,6 +15,8 @@ WRKSRC=		${WRKDIR}/${DISTNAME:C|[a-z]$||}
 DEPENDS+=	p5-MIME-Base64-[0-9]*:../../converters/p5-MIME-Base64
 DEPENDS+=	p5-URI-[0-9]*:../../www/p5-URI
 DEPENDS+=	p5-XML-Parser>=2.23:../../textproc/p5-XML-Parser
+
+REPLACE_PERL+=	bin/SOAPsh.pl bin/XMLRPCsh.pl bin/stubmaker.pl
 
 PERL5_PACKLIST=	auto/SOAP/Lite/.packlist
 
