--- a/x11/libXfixes/Makefile
+++ b/x11/libXfixes/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/11/03 21:31:40 joerg Exp $
 #
 
-DISTNAME=		libXfixes-4.0.1
+DISTNAME=		libXfixes-4.0.3
 CATEGORIES=		x11 devel
 MASTER_SITES=		http://xorg.freedesktop.org/releases/individual/lib/
 EXTRACT_SUFX=		.tar.bz2
