--- a/www/ap-auth-external/Makefile
+++ b/www/ap-auth-external/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2007/01/19 09:00:24 sborrill Exp $
 #
 
 DISTNAME=	mod_auth_external-${DISTVERS}
+PKGREVISION=	1
 PKGNAME=	${APACHE_PKG_PREFIX}-auth-external-${DISTVERS}
 CATEGORIES=	www
 MASTER_SITES=	http://unixpapa.com/software/
