--- a/fonts/monafonts/Makefile
+++ b/fonts/monafonts/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2005/12/29 22:20:00 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2006/02/05 23:09:10 joerg Exp $
 
 DISTNAME=	monafont-2.90
 PKGNAME=	${DISTNAME:S/font/fonts/}
@@ -11,12 +11,8 @@ MAINTAINER=	uebayasi@NetBSD.org
 HOMEPAGE=	http://monafont.sourceforge.net/
 COMMENT=	Japanese fonts for "Mona" seen at 2ch.net
 
-USE_X11BASE=	yes
 BUILD_TARGET=	bdf
 USE_TOOLS+=	bdftopcf gzip mkdirhier mkfontdir perl sed
-
-# X11BINDIR is just the path to the X11 tools listed above.
-MAKE_FLAGS+=	X11BINDIR=${TOOLS_DIR:Q}/bin
 
 MAKE_FLAGS+=	X11FONTDIR=${PREFIX:Q}/${FONTS_SUBDIR:Q}
 MAKE_FLAGS+=	SED_CMD=${SED:Q}
