--- a/x11/pygtk/Makefile
+++ b/x11/pygtk/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.22 2006/04/17 13:47:00 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2006/06/02 23:39:25 joerg Exp $
 #
 
 DISTNAME=	pygtk-0.6.11
 PKGNAME=	${PYPKGPREFIX}-gtk-0.6.11
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	x11 python
 MASTER_SITES=	ftp://ftp.gtk.org/pub/gtk/python/v1.2/
 
